<resources>
    <string name="app_name">Navi-Arch</string>
    <string name="uploading">폴더 선택</string>

    <string name="contentDescription">Image</string>

    <!--    Home  -->
    <string name="home">홈</string>
    <string name="main_hint">파일, 폴더</string>
    <string name="main_myFile">내 파일</string>
    <string name="main_star">즐겨찾기</string>
    <string name="main_recent">최근 파일</string>
    <string name="main_category">카테고리</string>

    <!--    dialog option box  -->
    <string name="delete_recent_title">최근 파일 목록 지우기</string>
    <string name="storage_analysis_title">저장공간 분석</string>
    <string name="recycle_bin_title">휴지통</string>
    <string name="setting_title">설정</string>

    <!-- Recycler View Row Strings -->
    <string name="file_default_name">default-file-name</string>
    <string name="file_default_last_modified_time">default-last-modified-time</string>

    <!-- Main Sort related Strings -->
    <string name="sort_name">이름순 정렬</string>
    <string name="sort_lmt">날짜순 정렬</string>
    <string name="sort_ascending">오름차순</string>
    <string name="sort_descending">내림차순</string>
    <string name="sort_type">유형 구분</string>
    <string name="sort_type_not">유형 혼합</string>

    <!-- Uploading Related Strings -->
    <string name="action_add_folder">폴더 만들기</string>
    <string name="action_upload">업로드</string>
    <string name="action_select_path">위치 선택</string>
    <string name="title_upload">파일 업로드 위치 선택</string>

    <!-- BottomSheet Related Strings -->
    <string name="bottom_sheet_default_filename">Default BottomSheet File Name</string>
    <string name="bottom_sheet_default_download">Download %1$s</string>
    <string name="file_storage_permission_denied">File read permission is denied, thus cannot download file!</string>
    <string name="bottom_sheet_default_remove">Remove %1$s</string>
    <string name="bottom_sheet_default_move">Move %1$s</string>

    <!-- Privacy Policy -->
    <string name = "privacy"> 1. 개인정보 처리방침이란?
Navi Cloud(이하"회사")는 이용자의 ‘동의를 기반으로 개인정보를 수집·이용 및 제공’하고 있으며, ‘이용자의 권리 (개인정보 자기결정권)를 적극적으로 보장’합니다.
회사는 정보통신서비스제공자가 준수하여야 하는 대한민국의 관계 법령 및 개인정보보호 규정, 가이드라인을 준수하고 있습니다.
“개인정보처리방침”이란 이용자의 소중한 개인정보를 보호함으로써 이용자가 안심하고 서비스를 이용할 수 있도록 회사가 준수해야 할 지침을 의미합니다.

본 개인정보처리방침은 회사가 제공하는 Navi Cloud 계정 기반의 서비스(이하 ‘서비스\'라 함)에 적용됩니다.

2. 개인정보 수집
서비스 제공을 위한 필요 최소한의 개인정보를 수집하고 있습니다.
회원 가입 시 또는 서비스 이용 과정에서 홈페이지 또는 개별 어플리케이션이나 프로그램 등을 통해 아래와 같은 서비스 제공을 위해 필요한 최소한의 개인정보를 수집하고 있습니다.

[Navi Cloud 계정]
필수
이메일, 아이디, 비밀번호, 이름, 서비스 이용내역

[본인인증 시]
이름, 성별, 생년월일, 휴대폰번호, 통신사업자, 내/외국인 여부, 암호화된 이용자 확인값(CI), 중복가입확인정보(DI))

[법정대리인 동의 시]
법정대리인 정보(이름, 성별, 생년월일, 휴대폰번호, 통신사업자, 내/외국인 여부, 암호화된 이용자 확인값(CI), 중복가입확인정보(DI))

[유료서비스 이용 시]
신용카드 결제 시: 카드번호(일부), 카드사명 등
휴대전화번호 결제 시: 휴대전화번호, 결제승인번호 등
계좌이체 시: 예금주명, 계좌번호, 계좌은행 등
상품권 이용 시: 상품권 번호, 해당 사이트 아이디

[환불처리 시]
계좌은행, 계좌번호, 예금주명, 이메일

[현금영수증 발행 시]
휴대폰번호, 현금영수증 카드번호

일부 서비스에서는 특화된 여러 기능들을 제공하기 위해 ‘카카오계정’에서 공통으로 수집하는 정보 이외에 이용자에게 동의를 받고
추가적인 개인정보를 수집할 수 있습니다.
필수정보란? : 해당 서비스의 본질적 기능을 수행하기 위한 정보
선택정보란? : 보다 특화된 서비스를 제공하기 위해 추가 수집하는 정보 (선택 정보를 입력하지 않은 경우에도 서비스 이용 제한은 없습니다.)
서비스에서 별도로 수집하는 개인정보 항목 자세히 보기 고객상담을 위해 추가 수집하는 개인정보 항목 자세히 보기
개인정보를 수집하는 방법은 다음과 같습니다.
개인정보를 수집하는 경우에는 반드시 사전에 이용자에게 해당 사실을 알리고 동의를 구하고 있으며, 아래와 같은 방법을 통해 개인정보를 수집합니다.

회원가입 및 서비스 이용 과정에서 이용자가 개인정보 수집에 대해 동의를 하고 직접 정보를 입력하는 경우
제휴 서비스 또는 단체 등으로부터 개인정보를 제공받은 경우
고객센터를 통한 상담 과정에서 웹페이지, 메일, 팩스, 전화 등
온·오프라인에서 진행되는 이벤트/행사 등 참여
서비스 이용 과정에서 이용자로부터 수집하는 개인정보는 아래와 같습니다.
PC웹, 모바일 웹/앱 이용 과정에서 단말기정보(OS, 화면사이즈, 디바이스 아이디, 폰기종, 단말기 모델명), IP주소, 쿠키, 방문일시, 부정이용기록, 서비스 이용 기록 등의 정보가 자동으로 생성되어 수집될 수 있습니다.

서비스 간 제휴, 연계 등으로 제3자로부터 개인정보를 제공받고 있습니다.
제공받는 개인정보 항목 자세히 보기</string>

</resources>