<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_file_type"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:src="@drawable/icon_black_folder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="16sp"
            android:text="@string/file_default_name" />

        <TextView
            android:id="@+id/lastModifiedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/file_default_last_modified_time" />

    </LinearLayout>

    <ImageView
        android:id="@+id/main_option"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_gravity="center"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/icon_black_option" />

</LinearLayout>