<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:rotation="180"
            android:src="@drawable/icon_arrow_right" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_myFile" />

            <TextView
                android:id="@+id/lastModifiedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:text="@string/file_default_last_modified_time" />

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon_plus"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_purple"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/main_search"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/icon_search_white"/>

        <TextView
            android:id="@+id/main_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:gravity="center"
            android:text="@string/main_hint"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/namesort_bar"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:background="@drawable/round_gray"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="이름순으로 정렬(오름차순)"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_arrow_up"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sort_bark"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/round_gray"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/linearsort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_purple_linearsort"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/gridsort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_gray_gridsort"/>



        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/myfile_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp" />


</LinearLayout>